# riks-hello-world-cpp

./: .README.md.swp  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-local-gdb.sh  build-local-valgrind.sh  build-local.bat  build-local.sh  build.bat  build.sh  default.config  download.py  libboost_serialization.so.1.63.0  libboost_system.so.1.63.0  libcrypto.so.1.0.0  libssl.so.1.0.0  main.cpp  main_.cpp  main_remote.cpp
conf/: default.config
her/: riks_hello_world_cpp
keys/: #gamer-MuQ9Wp6Hol.jks  #gamer-MuQ9Wp6Hol.keypriv  #gamer-MuQ9Wp6Hol.keypub  #gamer-MuQ9Wp6Hol.keysalt  #gamer-mwRuFFG97m.jks  #gamer-mwRuFFG97m.keypriv  #gamer-mwRuFFG97m.keypub  #gamer-mwRuFFG97m.keysalt  #hyker7b0Nanlz4V.jks  #hyker7b0Nanlz4V.keypriv  #hyker7b0Nanlz4V.keypub  #hyker7b0Nanlz4V.keysalt  #hykermwRuFFG97m.jks  #hykermwRuFFG97m.keypriv  #hykermwRuFFG97m.keypub  #hykermwRuFFG97m.keysalt
res/: default.config  root_certificate.pem
